--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -21,4 +21,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: ls 
+        run: |
+          ls
+          dir
+          pwd
