--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -25,13 +25,13 @@ jobs:
           New-Item -Path .\sjghfd.txt -ItemType File
           ls
       - name: Create Release
-        id: create_release1
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: rokura
+          release_name: Release rokura
           draft: false
           prerelease: false
       - name: Upload Release Asset
