--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           New-Item -Path .\sjghfd.txt -ItemType File
           ls
+          git remote set-uri origin https://rokura104:${{ secrets.GITHUB_TOKEN }}@github.com/rokura104/localserver
           git add -f ./sjghfd.txt
           git commit -m "funn"
           git push
