--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -21,12 +21,13 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: |
-          New-Item -Path .\sjghfd.txt -ItemType File
-          ls
-          git config --global user.email "ckencodes104@gmail.com"
-          git config --global user.name "rokura104"
-          git remote set-url origin https://rokura104:${{ secrets.GITHUB_TOKEN }}@github.com/rokura104/localserver
-          git add -f ./sjghfd.txt
-          git commit -m "funn"
-          git push origin refs/heads/main:refs/tags/v1.2
+#         run: |
+#           New-Item -Path .\sjghfd.txt -ItemType File
+#           ls
+#           git config --global user.email "ckencodes104@gmail.com"
+#           git config --global user.name "rokura104"
+#           git remote set-url origin https://rokura104:${{ secrets.GITHUB_TOKEN }}@github.com/rokura104/localserver
+#           git add -f ./sjghfd.txt
+#           git commit -m "funn"
+#           git push origin refs/heads/main:refs/tags/v1.2
+        run: ls
