--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,10 +15,16 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore "./github actions telegram bot/github actions telegram bot.csproj"
+      run: |
+        cd "github actions telegram bot"
+        dotnet restore
     - name: Build
-      run: dotnet build --no-restore  "./github actions telegram bot/github actions telegram bot.csproj"
+      run: |
+        cd "github actions telegram bot"
+        dotnet build --no-restore
     - name: Run
-      run: dotnet run  "./github actions telegram bot/github actions telegram bot.csproj"
+      run: |
+        cd "github actions telegram bot"
+        dotnet run
     - name: cmd
       run: ls
